--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         // Use the Access Token to Make an API Call
         const fetchDataFromSalesforce = (accessToken) => {
-            const salesforceApiUrl = "https://your-instance.salesforce.com/services/data/v57.0/sobjects/"; // Change this to the desired API endpoint
+            const salesforceApiUrl = "https://tiger-dev-ed.trailblaze.lightning.force.com/services/data/v57.0/sobjects/"; // Change this to the desired API endpoint
 
             fetch(salesforceApiUrl, {
                 method: "GET",
