--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         // Call your backend to exchange the authorization code for an access token
         const exchangeToken = async (authorizationCode) => {
             try {
-                const response = await fetch("http://localhost:3000/exchange-token", {
+                const response = await fetch("https://singlepage-fy8q.onrender.com/exchange-token", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
