--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 }
 
                 const data = await response.json();
+                console.log("data:", data);
                 console.log("Access Token:", data.accessToken);
 
                 document.getElementById("result").innerHTML =
