--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 
                 const data = await response.json();
                 console.log("data:", data);
-                console.log("Access Token:", data.accessToken);
+                //console.log("Access Token:", data.accessToken);
 
                 document.getElementById("result").innerHTML =
                     "<p style='color: green;'>Access Token: " +
-                    data.accessToken +
+                    // data.accessToken +
                     "</p>";
             } catch (error) {
                 console.error("Error exchanging token:", error);
